styles.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* GENERAL SETTINGS */

:root {
  --black: #18181B;
  --ligth-black: #252527;
  --light-blue: #69c2f5;
  --white: #FFFFFF;
  --shaded-white: #FAFAFA;
  --grey: #71717A;
  --shadow: #F4F4F5;
  --container-width: 1200px;
  --border-radius: 6px;
  --spacing-xs: 5px;
  --spacing-sm: 10px;
  --spacing-md: 15px;
  --spacing-lg: 20px;
  --spacing-xl: 40px;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: var(--shaded-white);
  display: flex;
  justify-content: center;
  transition: background-color 0.5s;
}

body.dark{
    background-color: rgb(19, 19, 19);
}

/* CONTENT */

.content{
    max-width: var(--container-width);
    background-color: var(--white);
    box-shadow: 0 0 10px var(--shadow);
    width: 100%;
    margin: 0 auto;
    transition: background-color 0.5s;
}

.content.dark{
    background-color: var(--black);
    color: var(--white);
    box-shadow: 0 0 10px var(--black);
}

/* HEADER */

header{
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: var(--container-width);
    width: 100%;
    height: 50px;
    margin-top: 20px;
}

.nav-bar{
    position: absolute;
    border: 1px solid #2F2F32;
    background-color: var(--white);
    box-shadow: 0 0 1px var(--grey);
    display: flex;
    gap: 10px;
    border-radius: 20px;
    padding: 8px 16px;
}

.nav-bar.dark{
    background-color: var(--black);
}

#dark-mode-toggle{
    margin-left: auto;
    margin-right: var(--spacing-lg);
}

input[type="checkbox"]{
    visibility: hidden;
    display: none;
}

.check{
    position: relative;
    display: block;
    width: 40px;
    height: 20px;
    background-color: var(--black);
    border-radius: 20px;
    overflow: hidden;
    cursor: pointer;
    transition: ease-in 0.5s;
    z-index: 2;
}

input[type="checkbox"]:checked ~ .check{
    background-color: white;
}

.check::before{
    content: '';
    position: absolute;
    top: 2px;
    left: 2px;
    background-color: white;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    transition: 0.5s;
}

input[type="checkbox"]:checked ~ .check:before{
    transform: translateX(-50px);
}

.check::after{
    content: '';
    position: absolute;
    top: 2px;
    right: 2px;
    background-color: black;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    transition: 0.5s;
    transform: translateX(50px);
}

input[type="checkbox"]:checked ~ .check:after{
    transform: translateX(0px);
}

button{
    border: none;
    color: inherit;
    font-family: inherit;
    background-color: transparent;
    font-size: .875rem;
}

button:hover{
    cursor: pointer;
}

/* INTRODUCTION */

.introduction{
    margin-top: 50px;
    padding: 50px 150px;
    display: flex;
    justify-content: center;
}

.title-container{
    flex: 1;
    display: flex;
    flex-direction: column;
    font-size: 7vw;
    border-bottom: 1px solid var(--grey);

}

.title{
    overflow: hidden;
}

.title:nth-child(2){
    margin-left: 10%;
}

.title:nth-child(3){
    margin-left: 20%;
}

.title:nth-child(4){
    margin-left: 30%;
}

.title-text-one{
    animation: slide-up 1s ease ;
    font-weight: 200;
    text-decoration: underline;
}
.title-text-two{
    font-weight: 200;
    animation: slide-up 1s ease .05s;
    text-decoration: underline;
}
.title-text-three{
    font-weight: 600;
    animation: slide-up 1s ease .1s;
}
.title-text-four{
    font-weight: 600;
    animation: slide-up 1s ease .15s;
}

@keyframes slide-up{
    0% {
        transform: translateY(100%);
    }

    100%{
        transform: translateY(0);
    }
}

/* ABOUT */

section{
    padding: 50px 150px;
    /* opacity: 0; */
    /* transition: opacity 1s; */
}

section.introduction{
    opacity: 1;
}

.section-title{
    font-size: 2rem;
    margin-bottom: var(--spacing-md);
    text-decoration: underline;
}

.about-content{
    display: grid;
    grid-template-columns: 1fr 1fr;
}


.about-pic-and-description{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.self-pic{
    height: 300px;
    width: auto;
    border-radius: 50%;
}

.description{
    line-height: 2;
}

.about-skills{
    display: flex;
    justify-content: center;
}

/* PROJECTS */



.projects-container{
    display: grid;
    grid-template-columns: repeat(3, 250px);
    justify-content: center;
    justify-items: center;
    gap: var(--spacing-lg);
}

.project{
    border: 1px solid var(--grey);
    border-radius: var(--border-radius);
    box-shadow: 2.5px 2.5px 1px var(--grey);
    display: flex;
    flex-direction: column;
    transition: transform 0.5s;

}

.project:hover{
    transform: perspective(1000px) translateZ(40px);
}

@keyframes bring-forth{
    0%{
        transform: translateX(0px);
    }

    100%{
        transform: translateX(50px);
    }
}

.svg-icons.dark{
    fill: var(--white);
}

.project-image{
    border-top-right-radius: var(--border-radius);
    border-top-left-radius: var(--border-radius);
    width: 250px;
    height: auto;
}

.project-description,
.project-name-and-links
{
    padding: 0 var(--spacing-md);
}

.project-name-and-links{
    margin-top: 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.project-name{
    font-size: 1.25rem;
    font-weight: 600;
}

.svg-icons{
    height: 20px;
}

/* CONTACT */

.contact-content{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.email{
    display: flex;
    align-items: center;
}

#email-icon.dark{
    fill: var(--white);
}


#github-icon,
#linkedin-icon{
    height: 20px;
}



#github-icon.dark > g{
    fill: white;
}

#linkedin-icon.dark > g{
    fill: white;
}

a{
    color: inherit;
}

/* MEDIA */

@media (max-width: 600px){
    section{
        padding: 16px;
    }

    .title:nth-child(1),
    .title:nth-child(2),
    .title:nth-child(3),
    .title:nth-child(4){
        margin-left: 0;
    }
    
    .title{
        text-align: center;
        font-size: 2rem;
    }

    .section-title{
        text-align: center;
    }

    .title-container{
        font-size: 1rem;
        border-bottom: 1px solid var(--grey);
    
    }

    .about-content{
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
    }

    .projects-container{
        grid-template-columns: 250px;
    }

    .contact-description{
        text-align: center;
    }

    
}

